@@ -1,3 +1,6 @@
+Apr 16 2024
+  jbrowse2: added black rat assembly
+
 Mar 18 2024
   jbrowse2: added bonobo assembly NHGRI_mPanPan1_v2.0_pri
   jbrowse2: fixed aliases generation
